# AIDomesticCoreAIJ

./: .readthedocs.yml  .travis.yml  AIPLATFORM_SDK_COMPLETE_IMPLEMENTATION.md  API_DOCUMENTATION_SUMMARY.md  ARCHITECTURE_OVERVIEW.md  CI_CD_FILES_CREATED.md  CI_CD_SUMMARY.md  COMPLETE_FILE_INVENTORY.md  COMPLETION_REPORT.md  COMPLIANCE_MAPPING_EU_AI_ACT_GDPR.md  Jenkinsfile  MONITORING_COMPLETE.md  MONITORING_FILE_MANIFEST.md  MULTILINGUAL_IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  SECURITY_THREAT_MODEL.md  WEBSITE_PLAN.md  aicore_openapi.yaml  azure-pipelines.yml  batch_results.json  docker-compose.monitoring.yml  performance_metrics.json  requirements.txt  sbom.xml  setup.py  simple_interactive.py  test_batch.json  test_batch.py  test_config.json  test_qiz.py  test_qiz_direct.py  test_qiz_simple.py
.circleci/: config.yml
.github/: README.md
aiplatform/: __init__.py  batch.py  cli.py  config.py  config_manager.py  core.py  exceptions.py  federated.py  genai.py  interactive.py  performance.py  performance_monitor.py  plugin_system.py  protocols.py  qiz.py  quantum.py  rate_limiting.py  security.py  testing.py  vision.py
api/: openapi.yaml
docs/: API_EXAMPLES.md  API_GUIDE.md  API_REFERENCE.md  AUTHENTICATION.md  CI_CD_PIPELINE.md  CI_CD_PLATFORMS.md  CI_CD_SETUP.md  CLI_FEATURES.md  CODE_SIGNING_AND_SBOM.md  DEPLOYMENT_AWS.md  DEPLOYMENT_AZURE.md  DEPLOYMENT_COMPLETE_GUIDE.md  DEPLOYMENT_DOCKER_SWARM.md  DEPLOYMENT_GCP.md  DEPLOYMENT_KUBERNETES.md  EXAMPLES_MULTIMODAL.md  EXAMPLES_QUANTUM_AI.md  EXAMPLES_VISION.md  FEDERATED_QUANTUM_AI.md  GENAI_INTEGRATION.md  GRAPHQL_GUIDE.md  IBM_RECHAIN_INTEGRATION.md  MONITORING_IMPLEMENTATION_SUMMARY.md  MONITORING_INTEGRATION_GUIDE.md  MONITORING_SETUP.md  OBSERVABILITY_BEST_PRACTICES.md  OWASP_SECURITY_CHECKLIST.md  (+21 more)
sdk/: CHANGELOG.md  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml
sdk/agents/: __init__.py  base.py  memory.py  orchestrator.py  planner.py  react.py  tools.py
sdk/analytics/: __init__.py  anomaly.py  dashboard.py  metrics.py  reporting.py  tracker.py
sdk/blockchain/: __init__.py  dao.py  defi.py  ethereum.py  multichain.py  nft.py  polkadot.py  quantum_safe.py  solana.py
sdk/cli/: __init__.py  main.py
sdk/docs/: API_REFERENCE.md
sdk/edge/: __init__.py  device_manager.py  federated_edge.py  inference.py  optimizer.py  runtime.py
sdk/examples/: __init__.py  multimodal_ai.py  quantum_ai_hybrid.py  security_demo.py  vision_demo.py
sdk/federated/: __init__.py  coordinator.py  marketplace.py  nft_weights.py  node.py  trainer.py
sdk/genai/: __init__.py  claude_client.py  diffusion.py  katya_genai.py  llama_client.py  openai_client.py  unified.py
sdk/integrations/: __init__.py  cloud.py  database.py  kubernetes.py  messaging.py  mlflow.py
sdk/metaverse/: __init__.py  avatar.py  economy.py  portal.py  spatial_ai.py  world_engine.py  xr_integration.py
sdk/multimodal/: __init__.py  audio.py  gigachat.py  processor.py  spatial.py  text.py  video.py
sdk/nlp/: __init__.py  embeddings.py  ner.py  rag.py  semantic_search.py  sentiment.py  translation.py
sdk/post_dns/: __init__.py  addressing.py  object_router.py  registry.py  resolver.py
sdk/protocols/: __init__.py  deploy_engine.py  qiz.py  web6.py  zero_server.py
sdk/qmp/: __init__.py  mesh.py  node.py  protocol.py  router.py  signature.py
sdk/quantum/: __init__.py  algorithms.py  aws_braket.py  backends.py  circuit_builder.py  google_quantum.py  qiskit_runtime.py  simulator.py
sdk/robotics/: __init__.py  controller.py  manipulation.py  navigation.py  ros_bridge.py  sensors.py
sdk/security/: __init__.py  didn.py  dilithium.py  key_manager.py  kyber.py  zero_trust.py
sdk/speech/: __init__.py  recognition.py  speaker.py  synthesis.py  vad.py
sdk/streaming/: __init__.py  events.py  pipeline.py  sse.py  websocket.py
sdk/tests/: __init__.py  test_quantum.py  test_security.py
sdk/utils/: __init__.py  config.py  helpers.py  logging.py  metrics.py  serialization.py
sdk/vision/: __init__.py  detector.py  face.py  gesture.py  slam.py  video.py  vision3d.py  webxr.py
(+121 files in other folders)
