[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiplatform-sdk"
version = "1.0.0"
description = "AIPlatform Quantum Infrastructure Zero SDK"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "REChain Network Solutions", email = "dev@rechain.network"},
    {name = "Katya AI Systems", email = "ai@katya.systems"}
]
maintainers = [
    {name = "SDK Team", email = "sdk@aiplatform.io"}
]
keywords = [
    "quantum", "ai", "machine-learning", "ibm-quantum", "qiskit",
    "federated-learning", "computer-vision", "multimodal", "genai",
    "cryptography", "post-quantum", "zero-trust"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "numpy>=1.21.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
quantum = [
    "qiskit>=1.0.0",
    "qiskit-ibm-runtime>=0.20.0",
    "qiskit-aer>=0.13.0",
]
vision = [
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "mediapipe>=0.10.0",
]
multimodal = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "openai-whisper>=20230314",
]
genai = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "diffusers>=0.25.0",
]
security = [
    "cryptography>=41.0.0",
    "pynacl>=1.5.0",
]
cloud = [
    "boto3>=1.26.0",
    "google-cloud-compute>=1.14.0",
    "azure-identity>=1.15.0",
]
integrations = [
    "kubernetes>=28.0.0",
    "mlflow>=2.9.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "kafka-python>=2.0.0",
]
all = [
    "aiplatform-sdk[quantum,vision,multimodal,genai,security,cloud,integrations]"
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
aiplatform = "sdk.cli:main"

[project.urls]
Homepage = "https://aiplatform.io"
Documentation = "https://docs.aiplatform.io"
Repository = "https://github.com/REChain-Network-Solutions/AIPlatform"
Issues = "https://github.com/REChain-Network-Solutions/AIPlatform/issues"
Changelog = "https://github.com/REChain-Network-Solutions/AIPlatform/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["sdk"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4"]
ignore = ["D100", "D104", "D107"]
target-version = "py39"

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]
"__init__.py" = ["F401"]
